# knxray

./: .gitattributes  .gitignore  AGENTS.md  LICENSE  Makefile  PLAN.md  README.md  SPEC.md  flake.nix  pyproject.toml
.github/workflows/: ci.yml
scripts/: update_readme.py
src/knxplain/: _diff.py  _setup.py  _show.py
src/knxray/: _cli.py  _diff.py  _normalize.py  _parse.py  _setup.py  _show.py
tests/: conftest.py  test_knxplain.py  test_knxray.py
tests/__snapshots__/: test_knxray.ambr
tests/fixtures/: demo-copy.knxproj  demo-device-param.knxproj  demo-ga-added.knxproj  demo-ga-removed.knxproj  demo.knxproj  demo2.knxproj  example-device-param-changed.knxproj  example-ga-removed.knxproj  example-resaved.knxproj  example.knxproj
