[build-system]
requires = ["hatchling", "editables"]
build-backend = "hatchling.build"

[project]
name = "knxplain"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = ["xknxproject"]

[project.scripts]
knxshow  = "knxplain._show:main"
knxdiff  = "knxplain._diff:main"
knxsetup = "knxplain._setup:main"

[dependency-groups]
dev = ["pytest"]
